# collections-extended

./: .buildinfo  .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .gitignore  .travis.yml  CHANGES.rst  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS  HISTORY.rst  Makefile  README.html  README.rst  README.txt  RELEASE_CHECKLIST.rst  TODO  TODO.md  bag.py  bijection.py  collection.py  collections_.py  collections_extended.py  holeylist.py  index.html  multiset.py  objects.inv  pyproject.toml  quicklist.py  requirements-dev.txt  requirements-docs.txt  requirements.txt  searchindex.js  setlist.py  setup.cfg  setup.py  tasks.py  (+1 more)
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  factory.doctree  index.doctree  indexed_dict.doctree  range_map.doctree  sentinel.doctree  setlists.doctree
.github/workflows/: python-package.yml
_modules/: index.html
_modules/collections_extended/: index.html
_modules/collections_extended/bags/: index.html
_modules/collections_extended/bijection/: index.html
_modules/collections_extended/indexed_dict/: index.html
_modules/collections_extended/range_map/: index.html
_modules/collections_extended/setlists/: index.html
_sources/: factory.rst.txt  indexed_dict.rst.txt  setlists.rst.txt
_static/: documentation_options.js
bags/: index.html
bijection/: index.html
changelog/: index.html
collections_extended/: __init__.py  __init__.pyi  __main__.py  _compat.py  _compat.pyi  _util.py  _util.pyi  _version.py  args.py  bags.py  bags.pyi  bijection.py  bijection.pyi  dict_extended.py  indexed_dict.py  indexed_dict.pyi  interval.py  interval_meta.py  interval_new.py  range_map.py  range_map.pyi  sentinel.py  setlists.py  setlists.pyi  sorted_list.py  table.py
collections_extended/mulset/: README.md  __init__.py  core.py  mapping.py  mutable.py  store.py
collections_extended/test/: test_bags.py  test_setlists.py
contributing/: index.html
datastructures/: bag.py  collections_.py  collections_extended.py  setlist.py
docs/: api.rst  bags.rst  bijection.rst  collections_extended.rst  conf.py  design_decisions.rst  factory.rst  getting_started.rst  index.rst  indexed_dict.rst  installation.rst  modules.rst  mulset.rst  range_map.rst  sentinel.rst  setlists.rst  table.rst  usage.rst
docs/_build/html/: objects.inv  (+1 more)
factory/: index.html
genindex/: index.html
getting_started/: index.html
indexed_dict/: index.html
range_map/: index.html
search/: index.html
sentinel/: index.html
setlists/: index.html
tests/: test_bags.py  test_bijection.py  test_collection_abc.py  test_collections_extended.py  test_indexed_dict.py  test_interval.py  test_range_map.py  test_sentinel.py  test_setlists.py  test_sortedlist.py  test_table.py  test_util.py  test_version.py
(+21 files in other folders)
